--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>vue-formation</title>
-    <head-css v-ref:headcss></head-css>
   </head>
   <body>
-    <router-view></router-view>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
